green peas (les: ora) blasphemy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(build_query)
 export(copy_env)
 export(db_drop_tables)
 export(lahman_oracle)
+export(oracle_tables)
+export(oracle_variables)
 export(over)
 export(sql_translator)
 export(sql_vector_over)
